--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,18 +1,13 @@
-preset: laravel
-
-enabled:
-  - alpha_ordered_imports
-
-disabled:
-  - length_ordered_imports
-
-finder:
-  exclude:
-    - "tests"
-    - "node_modules"
-    - "storage"
-    - "vendor"
-  not-name:
-    - "AcceptanceTester.php"
-    - "FunctionalTester.php"
-    - "UnitTester.php"
+php:
+  preset: laravel
+  disabled:
+    - unused_use
+  finder:
+    not-name:
+      - index.php
+      - server.php
+js:
+  finder:
+    not-name:
+      - webpack.mix.js
+css: true
